migrated to java21
Signed-off-by: dhanendra06 <dhanendra.tech@gmail.com>